Replaced tenant quota report image

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -129,7 +129,7 @@ You can generate or schedule a report for *Tenant Quotas* similar to other repor
 
 *Example*:
 
-image:tenant-quota-report.png[]
+image:tenant-quotas-report.png[]
 
 * Total Quota: Total quota enforced per attribute for a tenant
 * In Use: Amount currently in use by tenants
@@ -146,7 +146,6 @@ Tenancy Chargeback::
 You have the ability to do tenancy in chargeback where you are able to assign rates and have a different rate for each tenant. You can make use of the default rate or create your own set of rates depending on the tenant. As well, there is an ability to create chargeback reports by tenant. 
 
 See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/monitoring_alerts_and_reporting/#sect_chargeback[Chargeback] in the _Monitoring Alerts, and Reporting_ guide for information on how to create and assign default or custom chargeback rates, and how {product-title_short} calculates chargeback costs. 
-
 
 Tenancy Service Catalogs::
 
