made various changes from SME reviews in Google doc, edited terminology

--- a/doc-Configuring_High_Availability/topics/Overview.adoc
+++ b/doc-Configuring_High_Availability/topics/Overview.adoc
@@ -8,7 +8,7 @@ In this configuration, only one database is writable at any given time. This pro
 This guide describes two types of appliances used in high availability: 
 
 * _Database-only {product-title_short} appliances_, which do not have `evmserverd` processes enabled or a user interface.
-* _{product-title_short} appliances_, which are standard appliances with a user interface and other `evmserverd` processes enabled.
+* _{product-title_short} appliances_, which are standard appliances containing a user interface and which have other `evmserverd` processes enabled.
 
 
 [NOTE]
@@ -28,6 +28,8 @@ For a high availability {product-title} environment, you need a virtualization h
 ifdef::cfme[]
 See https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/paged/deployment-planning-guide/chapter-2-planning[Planning] in the _Deployment Planning Guide_ for information on setting up the correct disk space for the database-only appliances.
 endif::cfme[]
+
+The database-only appliances should reside on a highly reliable local network in the same location.
 
 [IMPORTANT]
 ====
