--- a/doc-Configuring_High_Availability/topics/Installation.adoc
+++ b/doc-Configuring_High_Availability/topics/Installation.adoc
@@ -25,7 +25,7 @@ The primary database-only appliance functions as an external database to the {pr
 . Select *Create key* to create the encryption key. You can create a new key, or use an existing key on your system by selecting *Fetch key from remote machine* and following the prompts.
 . Select *Create Internal Database*.
 . Select the database disk. {product-title_short} then activates the configuration.
-. For *Configure this server as a dedicated database instance?*, select `y`. Selecting this option configures this appliance as a database-only appliance, and therefore `evmserverd` processes will not run. 
+. For *Should this appliance run as a standalone database server?*, select `Y`. Selecting this option configures this appliance as a database-only appliance, and therefore the {product-title_abbr_uc} application and `evmserverd` processes will not run. This is required in highly available database deployments.
 +
 [WARNING]
 ====
@@ -68,6 +68,11 @@ The hostname must be visible to all appliances that communicate with this databa
 === Installing a {product-title_short} Appliance
 
 Configure a {product-title_short} appliance to point to the primary database server. This appliance does not serve as a database server. From this appliance, you can then configure the database itself.
+
+[NOTE]
+====
+After installing and configuring an empty database appliance in xref:installation_primary_db[] and xref:configuring_primary_db[], the steps in this section create the database schema used by {product-title_short} on the primary database appliance, and prepare the initial data. This must be completed before the secondary database server can be configured in xref:installation_standby_db[].
+====
 
 . Deploy a {product-title_short} appliance with an extra partition for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/paged/deployment-planning-guide/chapter-2-planning[Planning] in the _Deployment Planning Guide_.
 . Configure time synchronization on the appliance:
@@ -114,7 +119,7 @@ You can check the configuration on the appliance console details screen. When co
 
 The standby database-only appliance is a copy of the primary database-only appliance and takes over the role of primary database in case of failure.
 
-. Deploy a {product-title_short} appliance with an extra partition for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/paged/deployment-planning-guide/chapter-2-planning[Planning] in the _Deployment Planning Guide_.
+. Deploy a {product-title_short} appliance with an extra partition for the database that is the same size as the primary database-only appliance, as it will contain the same data. For recommendations on disk space, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.2/paged/deployment-planning-guide/chapter-2-planning[Planning] in the _Deployment Planning Guide_.
 . Configure time synchronization on the appliance:
 .. Edit `/etc/chronyd.conf` with valid NTP server information.
 .. Re-synchronize time information across the appliances:
