revise langauge based on reviewer suggestions

--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -279,7 +279,10 @@ ifdef::miq[Managing Providers]
 [[data_collection_for_gce]]
 === Data Collection for Google Compute Engine
   
-{product-title} can collect capacity and utilization metrics from Google Compute Engine once Google Cloud Monitoring API is enabled. Visit the Google APIs API Manager site to enable the Google Cloud Monitoring API. Once enabled, it may take a few minutes to propgate to {product-title_short}.
+{product-title} can collect capacity and utilization metrics from 
+Google Compute Engine once Google Cloud Monitoring API is enabled. 
+Visit https://console.developers.google.com/[Google API Console] to enable the Cloud Monitoring API. 
+Once enabled, it may take a few minutes to propgate to {product-title_short}.
 
   
 [[data_collected]]
