--- a/doc-Deployment_Planning_Guide/topics/capacity.adoc
+++ b/doc-Deployment_Planning_Guide/topics/capacity.adoc
@@ -282,7 +282,7 @@ ifdef::miq[Managing Providers]
 {product-title} can collect capacity and utilization metrics from 
 Google Compute Engine once Google Cloud Monitoring API is enabled. 
 Visit https://console.developers.google.com/[Google API Console] to enable the Cloud Monitoring API. 
-Once enabled, it may take a few minutes to propgate to {product-title_short}.
+Once enabled, it may take a few minutes to propagate to {product-title_short}.
 
   
 [[data_collected]]
