--- a/common/introduction.adoc
+++ b/common/introduction.adoc
@@ -65,15 +65,18 @@ image:5780.png[]
 When enabling capacity and utilization for metrics gathering over a period of time, it is recommended that the VMDB size scale accordingly. Evaluate the number of instances in your provider inventory and storage duration requirements to plan for increased VMDB sizing requirements. 
 =====
 
-Use the following information below to plan for your increased VMDB needs when working with metrics gathering:
+Use the following information to plan for your increased VMDB needs when working with metrics gathering:
 
 * Realtime metrics data are stored for 4 hours.
 
 * Rollup metrics data are stored for 6 months.
 
-The table below details the number of records created for a single OpenStack instance:
 
-image:metricsTimeTable.png[]
+*Example*:
+|===============
+|                                    | *Minute*             |    *Hour* | *Day*
+|   *OpenStack Provider Instance*      | *3* Realtime Metrics | *181* (3 records * 60 minutes = 180 Realtime Metrics + 1 hourly Rollup Metric) |*4,345* (3 records * 60 minutes * 24 hours =4320 Realtime Metrics + 1 daily Rollup Metric)
+|==============
 
 * Metrics data storage times can be configured by editing the Advanced Settings.
 
