Updated the General Configuratuion guide in accordance with feedback from l10n.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -108,10 +108,6 @@ As new clusters, hosts, and datastores are discovered, you will need to come bac
 
 * *System tags* are assigned automatically by {product-title}.
 
-[NOTE]
-======
-If you entered a *Company Name* in *Configuration*, then click on the *Settings* tab, then the *Server* your desired server, that name will appear on the tab instead of *My Company*.
-======
 
 [[creating-a-tag-category]]
 ====== Creating a Tag Category
@@ -1305,7 +1301,7 @@ For example, to configure user groups from your SAML identity provider to work w
   . On your {product-title} appliance, assign EVM roles to the groups. See _Creating a Role_ in xref:creating-a-role[].
 ======
 
-Complete the above steps on each appliance in the settings menu, then menu:Configuration[Access Control].
+Complete the above steps on each appliance in the settings menu, then navigate to menu:Configuration[Access Control].
 
 You can now log into your {product-title} appliance using your SAML credentials.
 
@@ -1703,9 +1699,9 @@ Table 3.9. log_depot
 [width="100%",cols="30%,70%",options="header",]
 |=======================================================================
 |Parameters|Description
-|uri|Specify the uri for the log depot. This is the same as URI in menu:Configuration[Diagnostics Collect Logs] in the appliance console. Default: blank
-|username|Specify the user name for the log depot. This is the same as User ID in menu:Configuration[Diagnostics Collect Logs] in the appliance console. Default: blank
-|password|Specify the password for the user for the log depot. This is the same as Password in menu:Configuration[Diagnostics Collect Logs] in the appliance console. Default: blank
+|uri|Specify the URI for the log depot. This is the same as the URI in menu:Configuration[Diagnostics > Collect Logs] in the appliance console. Default: blank
+|username|Specify the user name for the log depot. This is the same as the user ID in menu:Configuration[Diagnostics > Collect Logs] in the appliance console. Default: blank
+|password|Specify the password for the user for the log depot. This is the same as the password in menu:Configuration[Diagnostics > Collect Logs] in the appliance console. Default: blank
 |=======================================================================
 
 Table: performance
@@ -2791,7 +2787,7 @@ Once you configure a {product-title} instance to act as a global copy, and one o
 
 image:centralized_admin_disabled.png[Centralized Administration Config]
 
-. Navigate to the the settings menu.
+. Navigate to the settings menu.
 . Click *Configuration*.
 . Click the *Settings* accordion.
 . Click the region where the instance is located.
