--- a/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
@@ -16,7 +16,7 @@ include::common/attributes/miq.adoc[]
 
 :numbered:
 [[Installation]]
-include::topics/installation.adoc[]
+include::doc-Installing_on_Google_Compute_Engine/miq/topics/installation.adoc[]
 
 [[Configuration]]
 include::common/configuration.adoc[]
