--- a/doc-Installing_on_Red_Hat_Virtualization/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/miq/index.adoc
@@ -17,7 +17,7 @@ include::common/attributes/miq.adoc[]
 :numbered:
 
 [[Installation]]
-include::topics/installation.adoc[]
+include::doc-Installing_on_Red_Hat_Virtualization/miq/topics/installation.adoc[]
 
 [[Configuration]]
 include::common/configuration.adoc[]
