--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -46,6 +46,13 @@ Create a catalog item for each virtual machine or cloud instance that will be pa
 
 include::common/catalog-item-creation.adoc[]
 
+[[creating-playbook-catalog-item]]
+
+===== Creating a Playbook Catalog Item
+
+Create a catalog item that uses an Ansible Playbook to back it.
+include::common/creating-a-playbook-catalog-item.adoc[]
+
 [[service-dialogs]]
 ==== Service Dialogs
 
