--- a/common/create-playbook-service-catalog-item.adoc
+++ b/common/create-playbook-service-catalog-item.adoc
@@ -1,5 +1,7 @@
-[[creating-a-playbook-catalog-item]]
+[[create-playbook-catalog-item]]
 ===== Creating a Playbook Service Catalog Item
+
+Create a catalog item that uses an Ansible Playbook to back it.
 
 [NOTE]
 ====
@@ -10,17 +12,23 @@ Before creating an Ansible service, at least one repository, one playbook, and o
 . In the *Catalog Items* accordion, click on the *All Catalog Items*.
 . Click image:1847.png[](*Configuration*), then image:1862.png[](*Add a New Catalog Item*).
 . Select *Ansible Playbook* from the *Catalog Item Type* drop-down list. 
-. Type a *Name* and * Description* for the new service catalog item.
+. Type a *Name* and *Description* for the new service catalog item.
 . Click *Display in Catalog*.
-. Select the appropriate Ansible *Catalog* from the drop-down list. 
-. In the *Provisioning* tab, set parameters for your catalog item to use by selecting values for the following:
-.. Choose the *Repository* in which your Playbook resides from the drop-down list. 
-.. Type a name in the *Hosts* field.
-.. Add *Variables* & *Default Values*. 
+. Select the appropriate *Catalog* from the drop-down list. 
+. In the *Provisioning* tab, set parameters for your catalog item to use by configuring a Playbook to back your service item:
+.. Choose a *Repository* from the drop-down list. 
+.. Select the *Ansible Playbook* to use. 
+.. Assign the appropriate *Machine Credentials* from the drop-down list. 
+.. Add *Cloud* or *Network Credentials* from the drop-down lists. 
+.. Choose the *Host* against which to run the service item. 
+.. Add key value pairs for *Variables* and their corresponding *Default Values*. 
 .. In the *Dialog* options, choose an existing dialog from the *Use Existing* drop-down list or select *Create New* to add a new dialog.
 . In the *Retirement* tab, set parameters for your catalog item to use by selecting values for the following:
-.. Choose the *Repository* in which your Playbook resides from the drop-down list. 
-.. Type a name in the *Hosts* field.
-.. Add *Variables* & *Default Values*. 
+.. Choose a *Repository* from the drop-down list. 
+.. Select the *Ansible Playbook* to use. 
+.. Assign the appropriate *Machine Credentials* from the drop-down list. 
+.. Add *Cloud* or *Network Credentials* from the drop-down lists. 
+.. Choose the *Host* against which to run the service item. 
+.. Add key value pairs for *Variables* and their corresponding *Default Values*. 
 .. In the *Dialog* options, choose an existing dialog from the *Use Existing* drop-down list or select *Create New* to add a new dialog.
 . Click *Add*.
