update Catalog doc with anchor

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -46,8 +46,8 @@ Create a catalog item for each virtual machine or cloud instance that will be pa
 
 include::common/catalog-item-creation.adoc[]
 
-
-Create a catalog item that uses an Ansible Playbook to back it.
+[[create-playbook-service-catalog-item]]
+===== Creating a Playbook Catalog Item
 
 include::common/create-playbook-service-catalog-item.adoc[]
 
