Corrected a mismatched table border in the Deployment Planning Guide.
Conflicts:
	common/introduction.adoc

--- a/common/introduction.adoc
+++ b/common/introduction.adoc
@@ -57,6 +57,26 @@ Use the following table as a guideline to calculate minimum requirements for you
 
 image:5780.png[]
 
+[NOTE]
+=====
+When enabling capacity and utilization for metrics gathering over a period of time, it is recommended that the VMDB size scale accordingly. Evaluate the number of instances in your provider inventory and storage duration requirements to plan for increased VMDB sizing requirements. 
+=====
+
+Use the following information to plan for your increased VMDB needs when working with metrics gathering:
+
+* Realtime metrics data are stored for 4 hours.
+
+* Rollup metrics data are stored for 6 months.
+
+
+*Example*:
+[width="75%"]
+|==============
+|                                    | *Minute*             |    *Hour* | *Day*
+|   *OpenStack Provider Instance*      | *3* Realtime Metrics | *181* (3 records * 60 minutes = 180 Realtime Metrics + 1 hourly Rollup Metric) |*4,345* (3 records * 60 minutes * 24 hours =4320 Realtime Metrics + 1 daily Rollup Metric)
+|==============
+
+* Metrics data storage times can be configured by editing the Advanced Settings.
 
 [[browser-requirements]]
 ==== Browser Requirements
