--- a/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
+++ b/doc-Installing_on_Red_Hat_Virtualization/topics/installation.adoc
@@ -160,12 +160,40 @@ The Red Hat Virtualization export domain shows the {product-title} appliance in 
 [[running]]
 === Running {product-title}
 
-After uploading the appliance to the export storage domain, import it as a template and create a virtual machine. Use the following procedure as a guide.
+After uploading the appliance to the export storage domain, import it as a template and create a virtual machine. 
+//Use the following procedure as a guide.
 
-
-. Import the appliance image from the export storage domain as a template in a Red Hat Virtualization data storage domain. Use the `newimagename` you specified when you uploaded the image to find the image to import as a template. Once the import is complete, check the template for a network interface (NIC). If the template does not include one, create a NIC for it.
-. Create a new virtual machine using the {product-title} appliance template as a basis. See the Red Hat Virtualization Administration Guide for instructions.
-. Add a database disk if you are hosting the database on the same machine as the appliance.
-. Start the newly created {product-title} appliance virtual machine.
+. Import the appliance image from the export storage domain as a template in a Red Hat Virtualization data storage domain: 
+.. Click *Storage* > click the storage domain you uploaded the image to.
+.. Click the *Template Import* tab.
+.. Select the template from the list, using the `newimagename` you specified when you uploaded the image to find the image.
+.. Click *Import*.
++
+You can check status on the *Events* tab as Red Hat Virtualization imports the template. See https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.1-beta/html-single/virtual_machine_management_guide/#sect-Exporting_and_Importing_Virtual_Machines_and_Templates[Exporting and Importing Virtual Machines and Templates] in the Red Hat Virtualization _Virtual Machine Management Guide_ for additional information.
++
+. When the import is complete, check if the template has a network interface (NIC). If the template does not include one, create a NIC for it:
+.. Navigate to *Templates* and select the template you imported to show its details.
+.. Click the *Network Interfaces* tab to check if a NIC is listed. If there is an existing NIC, continue to the next step. If no existing NIC is shown:
+... Create a NIC by clicking *New* in the *Network Interfaces* tab: this opens the *New Network Interface* pop-up window. 
+... Enter any values as desired, or leave the defaults. Click *OK*.
++
+The new NIC shows in the *Network Interfaces* tab.
++
+. Create a new virtual machine using the {product-title} appliance template as a basis:
+.. In *Templates*, select the {product-title_short} template from the list.
+.. Click *New VM* to open the *New Virtual Machine* pop-up. 
+.. Fill in a name for the virtual machine, and any other details as desired. (The template pre-populates the required values for the virtual machine, except for the virtual machine *Name*.)
++
+See the Red Hat Virtualization Administration Guide for additional details: ?  
++
+The virtual machine is created. To view the virtual machine, select the data center, then *Virtual Machines* to view a list of all virtual machines.
+. Add a database disk if you are hosting the database on the same machine as the appliance:
+//From BZ1411114 - “how big?  Thin or thick provisioned?  (Anything else to consider?)
+.. To add a disk, select your virtual machine and click the *Disks* tab. 
+.. Click *New* to open the *New Virtual Disk* pop-up menu.
+.. Specify a *Size* in GB for the disk, and any other values as desired. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_ for additional considerations.
+.. Click *OK* to create the disk.
+. Start the newly created {product-title} appliance virtual machine by clicking the *Run* button (green triangle). 
+//You can then open the {product-title_short} appliance by clicking the Console button or navigating to the IP address in a web browser.
 
 Your Red Hat Virtualization environment now contains a running {product-title} appliance.
