--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
@@ -1,12 +1,12 @@
-= Adding a Red Hat Enterprise Virtualization Manager Provider
+= Adding a Red Hat Virtualization Manager Provider
 
-After initial installation and creation of a {product-title} environment, add a Red Hat Enterprise Virtualization Manager provider to the appliance.
+After initial installation and creation of a {product-title} environment, add a Red Hat Virtualization Manager provider to the appliance.
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Infrastructure Provider*). 
 . Enter the *Name* of the provider to add.
   The *Name* is how the device is labeled in the console.
-. Select *Red Hat Enterprise Virtualization Manager* from the *Type* list.
+. Select *Red Hat Virtualization Manager* from the *Type* list.
 . Enter the *Host Name or IP address(IPv4 or IPv6)* of the provider.
 +
 [IMPORTANT]
@@ -16,12 +16,12 @@ The *Host Name* must use a unique fully qualified domain name.
 . Enter the *API Port* if your provider uses a non-standard port for access.
 . Select the appropriate *Zone* for the provider.
   By default, the zone is set to *default*.
-. In the *Credentials* area, under *Default*, provide the login credentials required for the Red Hat Enterprise Virtualization Manager administrative user:
+. In the *Credentials* area, under *Default*, provide the login credentials required for the Red Hat Virtualization Manager administrative user:
 * Enter the user name, `admin@internal`, in the *Username* field.
 * Enter the password in the *Password* field.
 * Confirm the password in the *Confirm Password* field.
-* Click *Validate* to confirm {product-title} can connect to the Red Hat Enterprise Virtualization Manager.
-. Under *C & U Database* tab, provide the login credentials for the {product-title} user of the Red Hat Enterprise Virtualization Data Warehouse database:
+* Click *Validate* to confirm {product-title} can connect to the Red Hat Virtualization Manager.
+. Under *C & U Database* tab, provide the login credentials for the {product-title} user of the Red Hat Virtualization Data Warehouse database:
 +
 [IMPORTANT]
 ====
@@ -30,11 +30,11 @@ To collect capacity and utilization data, you must enable the capacity and utili
 +
 [IMPORTANT]
 ====
-To collect capacity and utilization data for a Red Hat Enterprise Virtualization environment, the Data Warehouse and Reports components must be installed in that environment, and you must create a {product-title} user in the Data Warehouse database.
+To collect capacity and utilization data for a Red Hat Virtualization environment, the Data Warehouse and Reports components must be installed in that environment, and you must create a {product-title} user in the Data Warehouse database.
 
 // Line break
 
-To install the Data Warehouse and Reports components in a Red Hat Enterprise Virtualization environment, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/paged/installation-guide/[Red Hat Virtualization Installation Guide].
+To install the Data Warehouse and Reports components in a Red Hat Virtualization environment, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/paged/installation-guide/[Red Hat Virtualization Installation Guide].
 
 // Line break
 
