--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -72,16 +72,16 @@ image:2192.png[]
 include::Discovering_Multiple_Management_Systems.adoc[]
 
 :leveloffset: 2
-= Red Hat Enterprise Virtualization Manager Providers
+= Red Hat Virtualization Manager Providers
 
-To use a Red Hat Enterprise Virtualization Manager provider, add it to the appliance and authenticate its hosts.
-
-:leveloffset: 3
-include::Adding_a_Red_Hat_Enterprise_Virtualization_Manager_Provider.adoc[]
-
+To use a Red Hat Virtualization Manager provider, add it to the appliance and authenticate its hosts.
 
 :leveloffset: 3
-include::Authenticating_Red_Hat_Enterprise_Virtualization_Hosts.adoc[]
+include::Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc[]
+
+
+:leveloffset: 3
+include::Authenticating_Red_Hat_Virtualization_Hosts.adoc[]
 
 :leveloffset: 2
 = OpenStack Infrastructure Providers
