edited adding RHV provider with new options for 4.5, plus a minor edit in the containers section -- rendering issue

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -1,6 +1,6 @@
 = The Container Overview Page
 
-Navigate to menu:Compute[Containers > <Object>] to view information on many different container objects. 
+Navigate to menu:Compute[Containers > _Object_] to view information on many different container objects. 
 
 [[cross-providers-insight]]
 == Cross-Providers Insight
@@ -10,7 +10,7 @@ Cross-providers insight is a feature that connects all layers of infrastructure,
 It supports cross-linking all of the layers available in the following environments:
 
 * OpenStack
-* Red Hat Enterprise Virtualization
+* Red Hat Virtualization
 * VMware vCenter
 * Amazon EC2
 * Google Cloud Engine
