--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
@@ -7,6 +7,8 @@ After initial installation and creation of a {product-title} environment, add a 
 . Enter the *Name* of the provider to add.
   The *Name* is how the device is labeled in the console.
 . Select *Red Hat Virtualization Manager* from the *Type* list.
+. Select the appropriate *Zone* for the provider.
+  By default, the zone is set to *default*.
 . Enter the *Host Name or IP address(IPv4 or IPv6)* of the provider.
 +
 [IMPORTANT]
@@ -14,18 +16,23 @@ After initial installation and creation of a {product-title} environment, add a 
 The *Host Name* must use a unique fully qualified domain name.
 ====
 . Enter the *API Port* if your provider uses a non-standard port for access.
-. Select the appropriate *Zone* for the provider.
-  By default, the zone is set to *default*.
+. Select *Yes* or *No* to *Verify TLS Certificates*.
+. To use a CA certificate to authenticate the provider, paste the the text of the certificate in *Trusted CA Certificates* in PEM format.
++
+////
+Was:
 . In the *Credentials* area, under *Default*, provide the login credentials required for the Red Hat Virtualization Manager administrative user:
 * Enter the user name, `admin@internal`, in the *Username* field.
 * Enter the password in the *Password* field.
 * Confirm the password in the *Confirm Password* field.
 * Click *Validate* to confirm {product-title} can connect to the Red Hat Virtualization Manager.
-. Under *C & U Database* tab, provide the login credentials for the {product-title} user of the Red Hat Virtualization Data Warehouse database:
+////
+. Specify the credentials for the provider and click *Validate*.
+. Under the *C & U Database* tab, configure capacity and utilization metrics collection by providing login credentials for the {product-title} user of the Red Hat Virtualization Data Warehouse database. You can also configure this later by editing the provider.
 +
 [IMPORTANT]
 ====
-To collect capacity and utilization data, you must enable the capacity and utilization server roles available from the settings menu, menu:Configuration[Server > Server Control]. For more information on capacity and utilization collection, see "Assigning the Capacity and Utilization Server Roles" in the _Deployment Planning Guide_.
+To collect capacity and utilization data, you must enable the capacity and utilization server roles available from the settings menu, menu:Configuration[Server > Server Control]. For more information on capacity and utilization collection, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5-beta/html-single/deployment_planning_guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles] in the _Deployment Planning Guide_.
 ====
 +
 [IMPORTANT]
@@ -40,23 +47,16 @@ To install the Data Warehouse and Reports components in a Red Hat Virtualization
 
 ifdef::cfme[To create a {product-title} user in the Data Warehouse database, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/deployment-planning-guide/#data_collection_for_rhev_33_34[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4] in the _Deployment Planning Guide_.]
 ifdef::miq[To create a {product-title} user in the Data Warehouse database, see "Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4" in the _Deployment Planning Guide_.]
-`
 ====
 +
+* Enter the database hostname in the *Hostname* field.
+* Enter the *API Port*.
+* Enter the *Database Name*
 * Enter the database user name in the *Username* field.
 * Enter the user password in the *Password* field.
 * Confirm the user password in the *Confirm Password* field.
 * Click *Validate* to confirm {product-title} can connect to the database.
-. Click *Save*.
-
-
-
-
-
-
-
-
-
+. Click *Add*.
 
 
 
