create new automation management chapter with ansible and ansible tpower documenation. Update Ansible Tower docs to refelct new location

--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -21,6 +21,9 @@ include::topics/Infrastructure_Providers.adoc[]
 include::topics/Configuration_Management_Providers.adoc[]
 
 :leveloffset: 1
+include::topics/Automation_Management_Providers.adoc[]
+
+:leveloffset: 1
 include::topics/Cloud_Providers.adoc[]
 
 :leveloffset: 1
