--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -47,7 +47,7 @@ Create a catalog item for each virtual machine or cloud instance that will be pa
 include::common/catalog-item-creation.adoc[]
 
 [[create-playbook-service-catalog-item]]
-===== Creating a Playbook Catalog Item
+===== Creating an Ansible Playbook Service Catalog Item
 
 include::common/create-playbook-service-catalog-item.adoc[]
 
