add tower catalog item creation procedure

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -46,6 +46,12 @@ Create a catalog item for each virtual machine or cloud instance that will be pa
 
 include::common/catalog-item-creation.adoc[]
 
+[[create-tower-catalog-item]]
+===== Creating an Ansible Tower Service Catalog Item
+
+include::common/create-tower-catalog-item.adoc[]
+
+
 [[service-dialogs]]
 ==== Service Dialogs
 
