Fixed a few minor spacing issues.

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -17,7 +17,7 @@ Ranging from simple to complex tasks, Ansible Playbooks can support cloud manage
 
 Ansible is built into {product-title_short} so there is nothing to install. The basic workflow when using Ansible in {product-title} is as follows:
 
-* Add a source control repository that contains your Playbooks .
+* Add a source control repository that contains your Playbooks.
 * Establish credentials with your inventory. 
 * Back your services, alerts and policies using available Playbooks. 
 
@@ -34,10 +34,10 @@ Add a repository so that {product-title} can discover and make available your Pl
 . Add a *URL* or IP Address for the repository.
 . Select the appropriate *SCM Credentials* from the drop-down menu.
 . Provide a branch name in the *SCM Branch* field.
-. Check the appropriate box for any *SCM UPdate Options*.
+. Check the appropriate box for any *SCM Update Options*.
 . Click *Add*.
 
-Once you have synced a repository,its Playbooks will become available to {product-title_short}.  
+Once you have synced a repository, its Playbooks will become available to {product-title_short}.  
 
 [[adding-credentials]]
 === Adding Credentials
