Updated the appliance_console_cli options for CF 4.5 beta release

--- a/common/appe-appliance-console-cli.adoc
+++ b/common/appe-appliance-console-cli.adoc
@@ -245,6 +245,16 @@ Currently, the `appliance_console_cli` feature is a subset of the full functiona
 
 
 |
+							
+							--uninstall-ipa (-u)
+
+
+|
+
+							uninstall IPA client
+
+
+|
 |===
 
 [NOTE]
@@ -275,16 +285,6 @@ Currently, the `appliance_console_cli` feature is a subset of the full functiona
 |
 
 							CA name used for certmonger (default: `ipa`)
-
-
-|
-
-							--internal (-i)
-
-
-|
-
-							create a database on the current appliance
 
 
 |
@@ -346,6 +346,17 @@ The certificate options augment the functionality of the `certmonger` tool and e
 |
 
 							Description
+
+|
+
+							--logdisk (-l)
+
+
+|
+
+							log disk path
+
+
 
 |
 
