--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Manager_Provider.adoc
@@ -4,20 +4,18 @@ After initial installation and creation of a {product-title} environment, add a 
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click  image:1847.png[] (*Configuration*), then click  image:1862.png[] (*Add a New Infrastructure Provider*). 
-. Enter the *Name* of the provider to add.
-  The *Name* is how the device is labeled in the console.
+. Enter a *Name* for the provider.
 . Select *Red Hat Virtualization Manager* from the *Type* list.
-. Select the appropriate *Zone* for the provider.
-  By default, the zone is set to *default*.
-. Enter the *Host Name or IP address(IPv4 or IPv6)* of the provider.
+. Select the appropriate *Zone* for the provider. If you do not specify a zone, it is set to *default*.
+. Enter the *Hostname (IPv4 or IPv6)* of the provider.
 +
 [IMPORTANT]
 ====
-The *Host Name* must use a unique fully qualified domain name.
+The *Hostname* must be a unique fully qualified domain name.
 ====
 . Enter the *API Port* if your provider uses a non-standard port for access.
 . Select *Yes* or *No* to *Verify TLS Certificates*.
-. To use a CA certificate to authenticate the provider, paste the the text of the certificate in *Trusted CA Certificates* in PEM format.
+. To use authenticate the provider using a CA certificate, paste the certificate's text in *Trusted CA Certificates* in PEM format.
 +
 ////
 Was:
@@ -27,35 +25,26 @@ Was:
 * Confirm the password in the *Confirm Password* field.
 * Click *Validate* to confirm {product-title} can connect to the Red Hat Virtualization Manager.
 ////
-. Specify the credentials for the provider and click *Validate*.
-. Under the *C & U Database* tab, configure capacity and utilization metrics collection by providing login credentials for the {product-title} user of the Red Hat Virtualization Data Warehouse database. You can also configure this later by editing the provider.
+. Enter the credentials for the provider and click *Validate*.
+. In the *C & U Database* tab, configure capacity and utilization metrics collection by providing login credentials for the {product-title} user of the Red Hat Virtualization Data Warehouse database. You can also configure this later by editing the provider.
 +
 [IMPORTANT]
 ====
-To collect capacity and utilization data, you must enable the capacity and utilization server roles available from the settings menu, menu:Configuration[Server > Server Control]. For more information on capacity and utilization collection, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5-beta/html-single/deployment_planning_guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles] in the _Deployment Planning Guide_.
+The following are required to collect capacity and utilization data from a Red Hat Virtualization provider:
+
+- In {product-title_short}, the capacity and utilization server roles must be enabled. Enable these roles from the settings menu, in menu:Configuration[Server > Server Control]. For more information on capacity and utilization collection, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5-beta/html-single/deployment_planning_guide/#assigning_the_capacity_and_utilization_server_roles[Assigning the Capacity and Utilization Server Roles] in the _Deployment Planning Guide_.
+- In the Red Hat Virtualization environment, the Data Warehouse and Reports components must be installed in that environment, and you must create a {product-title} user in the Data Warehouse database:
+* To install the Data Warehouse and Reports components in a Red Hat Virtualization environment, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/paged/installation-guide/[Red Hat Virtualization Installation Guide].
+* To create a {product-title} user in the Data Warehouse database, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/deployment-planning-guide/#data_collection_for_rhev_33_34[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4] in the _Deployment Planning Guide_.
 ====
 +
-[IMPORTANT]
-====
-To collect capacity and utilization data for a Red Hat Virtualization environment, the Data Warehouse and Reports components must be installed in that environment, and you must create a {product-title} user in the Data Warehouse database.
-
-// Line break
-
-To install the Data Warehouse and Reports components in a Red Hat Virtualization environment, see the link:https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/paged/installation-guide/[Red Hat Virtualization Installation Guide].
-
-// Line break
-
-ifdef::cfme[To create a {product-title} user in the Data Warehouse database, see https://access.redhat.com/documentation/en/red-hat-cloudforms/4.5/deployment-planning-guide/#data_collection_for_rhev_33_34[Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4] in the _Deployment Planning Guide_.]
-ifdef::miq[To create a {product-title} user in the Data Warehouse database, see "Data Collection for Red Hat Enterprise Virtualization 3.3 and 3.4" in the _Deployment Planning Guide_.]
-====
-+
-* Enter the database hostname in the *Hostname* field.
-* Enter the *API Port*.
-* Enter the *Database Name*
-* Enter the database user name in the *Username* field.
-* Enter the user password in the *Password* field.
-* Confirm the user password in the *Confirm Password* field.
-* Click *Validate* to confirm {product-title} can connect to the database.
+.. Enter the database hostname in the *Hostname* field.
+.. Enter the *API Port* if your provider uses a non-standard port for access.
+.. Enter the *Database Name*.
+.. Enter the database user name in the *Username* field.
+.. Enter the user password in the *Password* field.
+.. Confirm the user password in the *Confirm Password* field.
+.. Click *Validate* to confirm {product-title_short} can connect to the database.
 . Click *Add*.
 
 
